{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 15,
  "lineage": "8279625c-ad93-bd19-ca3f-d4dff53880f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05412f2c5196231d0",
            "arn": "arn:aws:ec2:us-east-1:802479323020:elastic-ip/eipalloc-05412f2c5196231d0",
            "domain": "vpc",
            "id": "eipalloc-05412f2c5196231d0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-215-68-235.compute-1.amazonaws.com",
            "public_ip": "18.215.68.235",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "eipalloc-05412f2c5196231d0",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:internet-gateway/igw-0e2e01288254a3278",
            "id": "igw-0e2e01288254a3278",
            "owner_id": "802479323020",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-project-igw"
            },
            "tags_all": {
              "Name": "infra-project-igw"
            },
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "igw-0e2e01288254a3278",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05412f2c5196231d0",
            "association_id": "eipassoc-09a8a7f5ffd794c14",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-014257ce773d6484d",
            "network_interface_id": "eni-0995c0f9506135e12",
            "private_ip": "10.0.1.183",
            "public_ip": "18.215.68.235",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f92b9a2b9ae4ac83",
            "tags": {
              "Name": "infra-project-nat"
            },
            "tags_all": {
              "Name": "infra-project-nat"
            },
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "nat-014257ce773d6484d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:route-table/rtb-092f02334a8a16d5f",
            "id": "rtb-092f02334a8a16d5f",
            "owner_id": "802479323020",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-014257ce773d6484d",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra-project-private-rt"
            },
            "tags_all": {
              "Name": "infra-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "rtb-092f02334a8a16d5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:route-table/rtb-06a4cc01b0dea0af1",
            "id": "rtb-06a4cc01b0dea0af1",
            "owner_id": "802479323020",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2e01288254a3278",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra-project-public-rt"
            },
            "tags_all": {
              "Name": "infra-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "rtb-06a4cc01b0dea0af1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0684ecf0097a47bff",
            "region": "us-east-1",
            "route_table_id": "rtb-092f02334a8a16d5f",
            "subnet_id": "subnet-03060c3452e9f0eaf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "rtbassoc-0684ecf0097a47bff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ebf22b678e6ceb",
            "region": "us-east-1",
            "route_table_id": "rtb-092f02334a8a16d5f",
            "subnet_id": "subnet-0e065ee7c2494a1de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "rtbassoc-0a1ebf22b678e6ceb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d40db638e27ac2",
            "region": "us-east-1",
            "route_table_id": "rtb-06a4cc01b0dea0af1",
            "subnet_id": "subnet-0f92b9a2b9ae4ac83"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "rtbassoc-003d40db638e27ac2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040302c067428acf1",
            "region": "us-east-1",
            "route_table_id": "rtb-06a4cc01b0dea0af1",
            "subnet_id": "subnet-0822db6cc4007d17e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "rtbassoc-040302c067428acf1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:subnet/subnet-03060c3452e9f0eaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03060c3452e9f0eaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802479323020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-project-private-0"
            },
            "tags_all": {
              "Name": "infra-project-private-0"
            },
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "subnet-03060c3452e9f0eaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:subnet/subnet-0e065ee7c2494a1de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e065ee7c2494a1de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802479323020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-project-private-1"
            },
            "tags_all": {
              "Name": "infra-project-private-1"
            },
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "subnet-0e065ee7c2494a1de",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:subnet/subnet-0f92b9a2b9ae4ac83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f92b9a2b9ae4ac83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802479323020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-project-public-0"
            },
            "tags_all": {
              "Name": "infra-project-public-0"
            },
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "subnet-0f92b9a2b9ae4ac83",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:subnet/subnet-0822db6cc4007d17e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0822db6cc4007d17e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802479323020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-project-public-1"
            },
            "tags_all": {
              "Name": "infra-project-public-1"
            },
            "vpc_id": "vpc-0cc032be66903e3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "subnet-0822db6cc4007d17e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802479323020:vpc/vpc-0cc032be66903e3d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083ccefbc5e2815b9",
            "default_route_table_id": "rtb-05e7905ab0997f684",
            "default_security_group_id": "sg-07a92a4cafa9f5618",
            "dhcp_options_id": "dopt-0276c4a4ea07b0ae9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc032be66903e3d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e7905ab0997f684",
            "owner_id": "802479323020",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-project-vpc"
            },
            "tags_all": {
              "Name": "infra-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "802479323020",
            "id": "vpc-0cc032be66903e3d5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}